--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:4306/demo?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&autoReconnect=true&zeroDateTimeBehavior=CONVERT_TO_NULL
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=123456
 spring.mysqlx.url=mysqlx://127.0.0.1:43060/demo?user=${spring.datasource.username}&password=${spring.datasource.password}
 
 
 # flyway
 spring.flyway.baseline-on-migrate=true
+spring.flyway.enabled=false
